# baum-welch-high-performance-computing

./: .gitignore  CMakeLists.txt  README.md  benchmarks.cpp  common.cpp  common.h  helper_utilities.cpp  helper_utilities.h  verifications.cpp
implementations/: baseline.cpp  baseline_old.cpp  baseline_transposed_emit_prob.cpp  combined_optimized.cpp  reordered_algorithm.cpp  scalar_optimized_blocking.cpp  scalar_optimized_playground.cpp  scalar_optimized_reorder.cpp  unrolled_emit_prob.cpp  unrolled_optimized.cpp  vector_optimized.cpp
misc/: BaumWelchWikipediaExample.xlsx  asl_baum_welch_ghmm_experiments.ipynb  asl_baum_welch_ghmm_experiments.py  log-normal-clang.csv  log-normal-gcc.csv  log-unroll-clang.csv  log-unroll-gcc.csv  log-vector-clang.csv  log-vector-gcc.csv  performance_log_4-28.csv  performance_log_4-28.txt
plotting/: .gitignore  performanceplot.py  rooflineplot.py
